# sCrapper

./: .gitignore  CMakeLists.txt  README.md  main.c
config/: configuration.sconf
headers/: parser.h  runner.h  sniff.h  structures.h
src/: parser.c  runner.c  scrapper.c  sniff.c  structures.c
tests_curl/: test.html
